--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.css
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.css
@@ -1,3 +1,20 @@
 .form-field-array .mat-list {
   padding-bottom: 8px;
 }
+
+.input-file {
+  visibility: hidden;
+}
+
+.image-picker {
+  margin: 1rem 0;
+}
+
+.image-preview {
+  height: 5rem;
+  margin: 1rem 0;
+}
+
+.image-preview img {
+  height: 100%;
+}
