--- a/ng-app/src/app/standard/standard-list/standard-list.component.html
+++ b/ng-app/src/app/standard/standard-list/standard-list.component.html
@@ -1,28 +1,60 @@
 <div class="action-group">
-  <a [routerLink]="['/' + domainName + '/add']" routerLinkActive="router-link-active" mat-raised-button>
+  <a
+    [routerLink]="['/' + domainName + '/add']"
+    routerLinkActive="router-link-active"
+    mat-raised-button
+  >
     <mat-icon>insert_drive_file</mat-icon> New {{ title }}
   </a>
 </div>
 
-<app-standard-filter [filterList]="filterList" [(queryModel)]="queryModel" (refresh)="applyFilter()"></app-standard-filter>
+<app-standard-filter
+  [filterList]="filterList"
+  [(queryModel)]="queryModel"
+  (refresh)="applyFilter()"
+></app-standard-filter>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table"
-  (matSortChange)="sortData($event)">
-
+<table
+  mat-table
+  [dataSource]="dataSource"
+  matSort
+  class="mat-elevation-z2 standard-table"
+  (matSortChange)="sortData($event)"
+>
   <ng-container [matColumnDef]="col.name" *ngFor="let col of columns">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col.displayName}} </th>
-    <td mat-cell *matCellDef="let item"> {{ getValue(item, col) }} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      {{ col.displayName }}
+    </th>
+    <td mat-cell *matCellDef="let item">
+      <span *ngIf="col.format !== 'link'">{{ getValue(item, col) }}</span>
+      <a
+        [routerLink]="[col.link + '/' + item._id]"
+        *ngIf="col.format === 'link'"
+        >{{ getValue(item, col) }}</a
+      >
+    </td>
   </ng-container>
 
   <!-- Action Column -->
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef> Action </th>
+    <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let item">
       <div class="btn-group" *ngIf="isAuth">
-        <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" [routerLink]="['/' + domainName + '/edit', item._id]">
+        <button
+          mat-icon-button
+          matTooltip="Edit"
+          matTooltipPosition="above"
+          [routerLink]="['/' + domainName + '/edit', item._id]"
+        >
           <mat-icon class="icon-xs">edit</mat-icon>
         </button>
-        <button mat-icon-button matTooltip="Delete" matTooltipPosition="above" color="warn" (click)="delete(item)">
+        <button
+          mat-icon-button
+          matTooltip="Delete"
+          matTooltipPosition="above"
+          color="warn"
+          (click)="delete(item)"
+        >
           <mat-icon class="icon-xs">delete</mat-icon>
         </button>
       </div>
@@ -30,7 +62,10 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
 
-<mat-paginator [length]="totalItems" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+<mat-paginator
+  [length]="totalItems"
+  [pageSizeOptions]="[10, 25, 100]"
+></mat-paginator>
