--- a/ng-app/src/app/event/event-view/event-view.component.html
+++ b/ng-app/src/app/event/event-view/event-view.component.html
@@ -47,14 +47,14 @@
             <h3>Services <a mat-icon-button (click)="addItemToEvent('providerService', 'services')"><mat-icon>edit</mat-icon></a></h3>
             <p *ngIf="formData.services && formData.services.length === 0">No service yet.</p>
             <ng-container *ngIf="formData.services && formData.services.length > 0">
-                <p *ngFor="let service of formData.services"> {{ service?.providerService?.name }} </p>
+                <p *ngFor="let service of formData.services"> {{ service?.providerService?.name }} x {{ service?.quantity }} {{ service?.providerService?.unit }}</p>
             </ng-container>
           </div>
           <div class="view-field">
             <h3>Facilities <a mat-icon-button (click)="addItemToEvent('providerFacility', 'facilities')"><mat-icon>edit</mat-icon></a></h3>
             <p *ngIf="formData.facilities && formData.facilities.length === 0">No facility yet.</p>
             <ng-container *ngIf="formData.facilities && formData.facilities.length > 0">
-                <p *ngFor="let facility of formData.facilities"> {{ facility?.providerFacility?.name }} </p>
+                <p *ngFor="let facility of formData.facilities"> {{ facility?.providerFacility?.name }} x {{ facility?.quantity }} {{ facility?.providerFacility?.unit }}</p>
             </ng-container>
           </div>
           <div class="view-field">
